derive_tests/tests/compile_fail/no_modifiers.rs
use validify::Validify;

#[derive(Validify)]
struct Test {
    #[modify()]
    s: String,
}

fn main() {}
