derive_tests/tests/compile_fail/no_modifiers.stderr
error: Invalid attribute #[modify] on field `s`: Needs at least one modifier
 --> tests/compile_fail/no_modifiers.rs:5:5
  |
5 |     #[modify()]
  |     ^
